msg func & responsive done

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
-body{
-    --slack-color: #3f0f40 ;
+body {
+    --slack-color: #3f0f40;
 }
-.app__body{
+
+.app__body {
     display: flex;
     height: 100vh;
+}
+
+.app__body .welcome {
+    display: grid;
+    place-items: center;
+    text-align: center;
+    color: indigo;
+
 }
